--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ PORT=3000
 JWT_SECRET=mysecretkey
 DYNAMODB_ENDPOINT=http://localhost:4566
 AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AKIAROVHVW3CW7I26GHY
+AWS_SECRET_ACCESS_KEY=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
